@@ -1,4 +1,7 @@
 2009-04-21	Mike Massonnet
+Same commit for the regex and the command that are also displayed
+
+2009-04-21	Mike Massonnet
 Markup escape for action name and command name in the treeview
 
 2009-04-21	Mike Massonnet
